# drone_sim_environment

./: CMakeLists.txt  README.md  install_autopilot.sh
config/: ros_gz_bridge.yaml
hooks/: resource_paths.dsv.in
launch/: farm_launch.py  turbine.launch.py  wind_px4.launch.py
models/wind_turbine_1/: model.sdf
src/: CMakeLists.txt  Dockerfile  README.md  docker_run.txt  install_autopilot.sh  package.xml
src/config/: ros_gz_bridge.yaml
src/hooks/: resource_paths.dsv.in
src/launch/: turbine.launch.py  wind_px4.launch.py
src/models/: gimbal.sdf
src/models/wind_turbine_1/: model.config  model.sdf
src/models/wind_turbine_1/meshes/: pole.stl
src/models/x500_gimbal/: gimbal.sdf  x500_base.sdf
src/models/x500_gimbal/meshes/: 1345_prop_ccw.stl  1345_prop_cw.stl  5010Base.dae  5010Bell.dae  NXP-HGD-CF.dae  cgo3_camera_remeshed_v1.stl  cgo3_horizontal_arm_remeshed_v1.stl  cgo3_mount_remeshed_v1.stl  cgo3_vertical_arm_remeshed_v1.stl
src/urdf/: floatgen_world.sdf
src/worlds/: custom.sdf
urdf/: seabed.xacro  turbine.xacro
worlds/: windy.sdf
