<?xml version="1.0"?>
<package format="3">
  <name>drone_sim_environment</name>
  <version>0.1.0</version>
  <description>The drone_sim_environment package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>
  <depend>px4_offboard</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}"/>
  </export>
</package>
